--- a/QAS/templates/QAS/improve_result_list.html
+++ b/QAS/templates/QAS/improve_result_list.html
@@ -1,13 +1,12 @@
 {% extends "QAS/base.html" %}
 
-{% block title %}改善点の結果{% endblock %}
+{% block title %}レビュー後の質問回答{% endblock %}
 
 {% block content %}
 
-<h1>改善点の結果</h1>
+<h1>質問ページの回答</h1>
 <div class="dashboard-container">
     <div class="review-table-section">
-        <h2>改善点の回答一覧</h2>
         <table class="review-table">
             <thead>
                 <tr>
