--- a/QAS/templates/QAS/store_name_update.html
+++ b/QAS/templates/QAS/store_name_update.html
@@ -3,7 +3,7 @@
 {% block title %}店舗名の変更{% endblock %}
 
 {% block content %}
-<h1>店舗名の変更</h1>
+<h1>店舗名の設定</h1>
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
