--- a/QAS/templates/QAS/user_settings.html
+++ b/QAS/templates/QAS/user_settings.html
@@ -6,49 +6,49 @@
 
 {% load static %}
 
-<h1>質問内容の設定</h1>
+<h1>レビュー内容の設定</h1>
 <div class="container">
     <form method="post">
         {% csrf_token %}
         <div class="form-group">
-            <label for="question_title">質問タイトル (全角35文字以内)</label>
+            <label for="question_title">レビューアンケートタイトル (全角35文字以内)</label>
             <input type="text" id="question_title" name="question_title" maxlength="35" class="form-control" value="{{ form.instance.question_title }}">
         </div>
         <div class="form-group">
-            <label>選択項目、アンケート後レビュー画面遷移先</label>
+            <label>選択項目の表示文字、アンケート後の遷移先設定</label>
             <div class="option-group">
                 <input type="text" class="form-control inline" name="very_satisfied_label" value="{{ form.instance.very_satisfied_label }}">
                 <select name="very_satisfied_redirect_url" class="form-control inline">
                     <option value="google_review" {% if form.instance.very_satisfied_redirect_url == "google_review" %}selected{% endif %}>Googleレビューへ遷移</option>
-                    <option value="app_review" {% if form.instance.very_satisfied_redirect_url == "app_review" %}selected{% endif %}>改善点入力ページに遷移</option>
+                    <option value="app_review" {% if form.instance.very_satisfied_redirect_url == "app_review" %}selected{% endif %}>質問ページに遷移</option>
                 </select>
             </div>
             <div class="option-group">
                 <input type="text" class="form-control inline" name="satisfied_label" value="{{ form.instance.satisfied_label }}">
                 <select name="satisfied_redirect_url" class="form-control inline">
                     <option value="google_review" {% if form.instance.satisfied_redirect_url == "google_review" %}selected{% endif %}>Googleレビューへ遷移</option>
-                    <option value="app_review" {% if form.instance.satisfied_redirect_url == "app_review" %}selected{% endif %}>改善点入力ページに遷移</option>
+                    <option value="app_review" {% if form.instance.satisfied_redirect_url == "app_review" %}selected{% endif %}>質問ページに遷移</option>
                 </select>
             </div>
             <div class="option-group">
                 <input type="text" class="form-control inline" name="neutral_label" value="{{ form.instance.neutral_label }}">
                 <select name="neutral_redirect_url" class="form-control inline">
                     <option value="google_review" {% if form.instance.neutral_redirect_url == "google_review" %}selected{% endif %}>Googleレビューへ遷移</option>
-                    <option value="app_review" {% if form.instance.neutral_redirect_url == "app_review" %}selected{% endif %}>改善点入力ページに遷移</option>
+                    <option value="app_review" {% if form.instance.neutral_redirect_url == "app_review" %}selected{% endif %}>質問ページに遷移</option>
                 </select>
             </div>
             <div class="option-group">
                 <input type="text" class="form-control inline" name="dissatisfied_label" value="{{ form.instance.dissatisfied_label }}">
                 <select name="dissatisfied_redirect_url" class="form-control inline">
                     <option value="google_review" {% if form.instance.dissatisfied_redirect_url == "google_review" %}selected{% endif %}>Googleレビューへ遷移</option>
-                    <option value="app_review" {% if form.instance.dissatisfied_redirect_url == "app_review" %}selected{% endif %}>改善点入力ページに遷移</option>
+                    <option value="app_review" {% if form.instance.dissatisfied_redirect_url == "app_review" %}selected{% endif %}>質問ページに遷移</option>
                 </select>
             </div>
             <div class="option-group">
                 <input type="text" class="form-control inline" name="very_dissatisfied_label" value="{{ form.instance.very_dissatisfied_label }}">
                 <select name="very_dissatisfied_redirect_url" class="form-control inline">
                     <option value="google_review" {% if form.instance.very_dissatisfied_redirect_url == "google_review" %}selected{% endif %}>Googleレビューへ遷移</option>
-                    <option value="app_review" {% if form.instance.very_dissatisfied_redirect_url == "app_review" %}selected{% endif %}>改善点入力ページに遷移</option>
+                    <option value="app_review" {% if form.instance.very_dissatisfied_redirect_url == "app_review" %}selected{% endif %}>質問ページに遷移</option>
                 </select>
             </div>
         </div>
