--- a/QAS/staticfiles/css/style.css
+++ b/QAS/staticfiles/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
     background-color: #f4f4f9;
     margin: 0;
     padding: 0;
@@ -173,11 +173,12 @@ label {
 @media screen and (max-width: 600px) {
     .container {
         padding: 15px;
-        margin: 10px;
+        margin: 5px;
     }
 
     .header, .success-header, .feedback-header {
         padding: 8px;
+        padding-top: 5px;
     }
 
     .btn, .success-button {
