--- a/QAS/templates/QAS/fail.html
+++ b/QAS/templates/QAS/fail.html
@@ -5,6 +5,7 @@
 <html lang="ja">
     <head>
         <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     </head>
