--- a/QAS/templates/QAS/logout.html
+++ b/QAS/templates/QAS/logout.html
@@ -3,6 +3,7 @@
 <html lang="ja">
 <head>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
     <script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script>
