--- a/QAS/templates/QAS/review.html
+++ b/QAS/templates/QAS/review.html
@@ -4,6 +4,7 @@
 <html lang="ja">
 <head>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -13,7 +14,8 @@
     <div class="container">
         <div class="header">
             <h1>{{ store_name }} アンケート</h1>
-            <p>アンケートのご協力お願いいたします（所要時間1分）</p>
+            <p>アンケートのご協力お願いいたします</p>
+            <p>（所要時間1分）</p>
         </div>
         <form method="post">
             {% csrf_token %}
