店舗名設定機能修正

--- a/QAS/templates/QAS/improvepage.html
+++ b/QAS/templates/QAS/improvepage.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <p>アンケートのご協力お願いいたします（所要時間1分）</p>
+            <p>アンケートのご協力お願いいたします</p>
+            <p>（所要時間1分）</p>
         </div>
         <form method="post">
             {% csrf_token %}
