--- a/QAS/staticfiles/css/style.css
+++ b/QAS/staticfiles/css/style.css
@@ -14,6 +14,7 @@ body {
     max-width: 600px;
     width: 100%;
     margin: 20px;
+    margin-top: 0;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -21,11 +22,16 @@ body {
 }
 
 .header {
-    background-color: #357ebd;
+    background-color: #2b6aa0;
     color: white;
     padding: 10px;
     text-align: center;
     border-radius: 8px 8px 0 0;
+}
+
+.header p {
+    margin-bottom: 7px;
+    line-height: 0.8;
 }
 
 .question {
@@ -36,7 +42,7 @@ body {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #357ebd;
+    background-color: #2b6aa0;
     color: white;
     text-align: center;
     text-decoration: none;
@@ -47,7 +53,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #357ebd;
+    background-color: #2b6aa0;
 }
 
 label {
@@ -112,7 +118,7 @@ label {
 }
 
 .success-button:hover {
-    background-color: #357ebd;
+    background-color: #2b6aa0;
 }
 
 /* フィードバックページのスタイル */
