--- a/QAS/templates/QAS/base.html
+++ b/QAS/templates/QAS/base.html
@@ -3,30 +3,28 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/kanri.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>{% block title %}QAS{% endblock %}</title>
 </head>
 <body>
     <div class="sidebar">
-
-        
         <h2><a href="{% url 'kanri' store_code=store_code %}">メニュー</a></h2>
-        <h3>店舗名</h3>
+        <h3><span class="material-icons">store</span> 店舗名</h3>
         <h3><span class="store-name-value"> {{ store_name }}</span></h3>
         <ul>
-            <li><a href="{% url 'kanri' store_code=store_code %}">レビュー結果</a></li>
-            <li><a href="{% url 'improve_result_list' %}">質問ページの回答一覧</a></li>
+            <li><a href="{% url 'kanri' store_code=store_code %}"><span class="material-icons">bar_chart</span>レビュー結果</a></li>
+            <li><a href="{% url 'improve_result_list' %}"><span class="material-icons">assignment</span>質問ページの回答一覧</a></li>
             <li class="menu-item has-submenu">
-                <a href="#">設定</a>
+                <a href="#"><span class="material-icons">settings</span>設定</a>
                 <ul class="submenu">
                     <li><a href="{% url 'name_setting' %}">店舗情報の設定</a></li>
                     <li><a href="{% url 'user_settings' %}">レビュー設定</a></li>
                     <li><a href="{% url 'improve_settings' %}">質問ページの設定</a></li>
                 </ul>
             </li>
-            <li><a href="{% url 'review_form' store_code=store_code %}">レビュー画面プレビュー</a></li>
-
-            <li><a href="{% url 'logout' %}">ログアウト</a></li>
+            <li><a href="{% url 'review_form' store_code=store_code %}"><span class="material-icons">preview</span>レビュー画面プレビュー</a></li>
+            <li><a href="{% url 'logout' %}"><span class="material-icons">logout</span>ログアウト</a></li>
         </ul>
         <!-- <div>
             Store code: {{ store_code }}
