--- a/QAS/templates/QAS/review.html
+++ b/QAS/templates/QAS/review.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <script src="https://unpkg.com/ionicons@4.1.2/dist/ionicons.js"></script>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
