--- a/QAS/templates/QAS/finish.html
+++ b/QAS/templates/QAS/finish.html
@@ -10,15 +10,12 @@
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     </head>
 <body>
-    <div class="fail-container">
-        <div class="fail-header">
-            <h1>アンケート</h1>
+    <div class="container">
+        <div class="header">
+            <h2>アンケート</h2>
         </div>
-        <div class="fail-message">
+            <p>アンケートは以上になります。</p>
             <p>ご意見をお聞かせいただきありがとうございます。</p>
-            <p>数秒後にフィードバックページに遷移します。</p>
-        </div>
-        <button class="fail-button" onclick="window.location.href='/feedback/'">フィードバックフォームへ</button>
     </div>
 </body>
 </html>
