--- a/QAS/staticfiles/css/kanri.css
+++ b/QAS/staticfiles/css/kanri.css
@@ -98,6 +98,7 @@ body {
 .button {
     display: inline-block;
     padding: 10px 20px;
+    margin-top: 10px;
     background-color: #2b6aa0;
     color: white;
     text-align: center;
